<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HangmanClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="startgame">startGame</string>
    <string name="add_word">Add Word</string>
    <string name="edit_my_words">Edit my words</string>
    <string name="enter_your_word">Enter your word:</string>
    <string name="cancel">Cancel</string>
    <string name="select_category">Select category:</string>
    <string name="enter_description">Enter description:</string>
    <string name="edit_word">Edit word</string>
    <string name="word_to_guess">"Word to guess: "</string>
    <string name="tries_left">"Tries Left: "</string>
    <string name="make_a_guess">Make a guess</string>
    <string name="letters_to_guess">"Letters to guess: "</string>
    <string name="letters_you_have_tried">"Letters you have tried: "</string>
    <string name="id">"ID: "</string>
    <string name="username">"Username: "</string>
    <string name="games">"Games: "</string>
    <string name="win">win:</string>
    <string name="lose">"lose: "</string>
    <string name="whole_word_guesses">"whole word guesses: "</string>
    <string name="gussed_words">"Gussed words: "</string>
    <string name="word_description">"Word description: "</string>
    <string name="guess_whole_word">Guess whole word</string>

</resources>
