<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
	        android:layout_gravity="left" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	   	<TextView
	        android:id="@+id/txtLettersToGuess" 
	        android:layout_width="300dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:textSize="20dp"
	        android:text="@string/letters_to_guess"/>     
	    <TextView
	        android:id="@+id/txtTriesLeft" 
	        android:layout_width="300dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:textSize="20dp"
	        android:text="@string/tries_left"/>
	    <TextView
	        android:id="@+id/txtLettersYouTried" 
	        android:layout_width="300dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:textSize="20dp"
	        android:text="@string/letters_you_have_tried"/>  
	    <TextView
	        android:id="@+id/txtWordToGuess" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:textSize="20dp"
	        android:text=""/>     
	    <EditText 
	        android:id="@+id/etLetterForGuess"
	        android:layout_width="300dp"
	        android:layout_height="50dp"
	        android:singleLine="true"
	        android:maxLength="1"/>	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right|top"
	        android:orientation="vertical" >
		<ImageView 
	        android:id="@+id/imgHangmanImage"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>    
	
		</LinearLayout>
    </LinearLayout>

  
    <Button 
        android:id="@+id/btnGuessLetter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/make_a_guess"/>

    

</LinearLayout>
